# telegram-plubot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
bot_collection/cock_size/: conf.py
bot_collection/example_bot/: conf.py
bot_collection/example_bot/plugins/example/: __init__.py  context_types.py  reply_keyboard.py  (+1 more)
bot_collection/meme_bot/: conf.py
bot_collection/meme_bot/meme/: __init__.py
bot_collection/video_downloader_bot/: conf.py
bot_collection/video_downloader_bot/video_downloader/: __init__.py  converter.py  tests.py  utils.py  video.py
cock_size/cocksize/: __init__.py  tests.py
example_bot/: conf.py
example_bot/plugins/cocksize/: __init__.py  tests.py
example_bot/plugins/example/: __init__.py  context_types.py  simple_inlinekeyboard.py
example_bot/plugins/inlinekeyboard/: __init__.py
example_bot/plugins/inlinequery/: __init__.py
example_bot/plugins/meme/: __init__.py
plubot/: __main__.py  bot_command.py  cli.py  config.py  core.py  helpers.py  plugin_manager.py  utils.py
plubot/builtin_plugins/: __init__.py  acl.py
plubot/builtin_plugins/storage/: __init__.py
plubot/plugin/: __init__.py  hook_specs.py  hook_types.py  manager.py
plubot/plugins/: __init__.py  hookspec.py
plubot/plugins/example/: __init__.py
plubot/plugins/inlinekeyboard/: __init__.py
plubot/plugins/inlinequery/: __init__.py
plubot/plugins/meme/: __init__.py
plugin_collection/video_downloader_bot/video_downloader/: __init__.py  utils.py  video.py
tests/: test_config.py
(+15 files in other folders)
